# freedvtnc2

./: .gitignore  README.md  build_lib.py  c01.raw  pyproject.toml  sBitx Setup  sBitx_Setup.md
freedvtnc2/: __main__.py  audio.py  freedv.h  freedv_build.py  modem.py  pyproject.toml  requirements.txt  rigctl.py  shell.py  test_audio.py  test_modem.py  tnc.py
