[tool.poetry]
name = "freedvtnc2"
version = "0.1.0"
description = ""
authors = ["xssfox <xss@sprocketfox.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cffi = "^1.16.0"
configargparse = "^1.7"
pyaudio = "^0.2.14"
tabulate = "^0.9.0"
pydub = "^0.25.1"
kissfix = "^7.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
